GH pages homepage

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
+  "homepage": "https://madsciencist.github.io/fabric-flow",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
