--- a/package.json
+++ b/package.json
@@ -41,5 +41,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "git-branch-is": "^4.0.0",
+    "husky": "^4.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "if git-branch-is master; then npm run deploy; fi"
+    }
   }
 }
